chatterloop/server-chatterloop-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatterloop-api-deployment
  labels:
    app: chatterloop-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chatterloop-api
  template:
    metadata:
      labels:
        app: chatterloop-api
    spec:
      containers:
      - name: chatterloop-api-cntnr
        image: johnpauloramil187/chatterloop_api:v2.1.5
        ports:
        - name: http
          containerPort: 3001
      imagePullSecrets:
        - name: neon-systems-registry

---

apiVersion: v1
kind: Service
metadata:
  name: chatterloop-api-service
spec:
  selector:
    app: chatterloop-api
  ports:
    - name: http
      port: 80
      targetPort: 3001
