chatterloop/neonsystems-ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ns
  annotations:
    cert-manager.io/issuer: neonsystems-letsencrypt-nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - server.chatterloop-api.com
      secretName: neonsystems-letsencrypt-nginx
  rules:
    - host: server.chatterloop-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatterloop-api-service
                port:
                  number: 3001
